# open-shield-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
.agent/rules/: project.md
.agent/skills/python-packaging/resources/: implementation-playbook.md
.agent/skills/python-pro/: SKILL.md
.agent/skills/python-testing-patterns/resources/: implementation-playbook.md
.agent/skills/solid_architecture/: SKILL.md
.agent/skills/solid_architecture/examples/: before_after_refactor.py  clean_architecture_layout.md  dip_ports_adapters.py
.agent/skills/solid_architecture/resources/: code_review_checklist.md
.claude/: settings.local.json
.claude/commands/: complete-phase.md  log.md  review.md  start-phase.md  sync-docs.md  track.md
.github/workflows/: ci.yml
docs/: developer-guide.md  naming-conventions.md  open-shield-python.md  project-bootstrap.md
docs/architecture/: system-overview.md
docs/design/: overview.md
docs/implementation/: guidelines.md
docs/planning/: README.md  backlog.md  roadmap.md  specs.md  tasks.md  tech-debt.md
docs/planning/decisions/: 0000-template.md  001-clean-architecture.md  002-modern-tooling.md  003-pydantic-usage.md
docs/planning/phases/: phase-0-init.md  phase-1-core.md  phase-2-authz.md  phase-3-integration.md  phase-4-publish.md
scripts/: check-history-reminder.sh
specs/: README.md  status.md
specs/backlog/: backlog.md
specs/changelog/: 2026-03.md
specs/decisions/: 0000-template.md  0001-clean-architecture.md  0002-modern-tooling.md  0003-pydantic-usage.md  README.md  impact-map.json
specs/phases/: README.md  index.json
specs/phases/phase-0-init/: overview.md  retrospective.md  tasks.md
specs/phases/phase-1-core/: overview.md  retrospective.md  tasks.md
specs/phases/phase-2-adapters/: overview.md  retrospective.md  tasks.md
specs/phases/phase-3-integration/: overview.md  retrospective.md  tasks.md
specs/phases/phase-4-release/: overview.md  retrospective.md  tasks.md
specs/roadmap/: roadmap.md
specs/vision/: principles.md  project-charter.md  success-criteria.md
src/open_shield/adapters/: __init__.py  config.py  key_provider.py  token_validator.py
src/open_shield/api/fastapi/: __init__.py  dependencies.py  middleware.py
src/open_shield/domain/: __init__.py  entities.py  exceptions.py
src/open_shield/domain/ports/: __init__.py  key_provider.py  tenant_resolver.py  token_validator.py
src/open_shield/domain/services/: __init__.py  authorization_service.py  claim_mapping.py  token_service.py
tests/integration/adapters/: test_key_provider.py  test_token_validator.py
tests/integration/api/: test_fastapi.py
tests/unit/adapters/: test_config.py
tests/unit/domain/: test_authorization_service.py  test_claim_mapping.py  test_token_service.py
