[project]
name = "open-shield-python"
version = "0.2.1"
description = "Vendor-agnostic authentication and authorization enforcement SDK"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Avinash Singh", email = "avinashsingh539+osp-security@gmail.com" }
]
keywords = [
    "authentication",
    "authorization",
    "fastapi",
    "jwt",
    "oidc",
    "rbac",
    "security"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.8.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "fastapi>=0.129.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_shield"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=open_shield --cov-report=term-missing"

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.0",
    "uvicorn>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/avinash-singh-io/open-shield-python"
Repository = "https://github.com/avinash-singh-io/open-shield-python"
"Bug Tracker" = "https://github.com/avinash-singh-io/open-shield-python/issues"
